# ds-interview-day-ahead-price

./: .gitignore  DATA_DICTIONARY.md  Makefile  README.md  WRITEUP.md  pyproject.toml
solution/: README.md
src/: config.py  data.py  features.py  interface.py  models.py  run.py  score.py
tests/: conftest.py  test_loop.py  test_no_leakage.py  test_pit.py
